--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <a href="01 - JavaScript Drum Kit/index-MY.html">01 - JavaScript Drum Kit</a>
+  <a href="02 - JS and CSS Clock/index-MY.html">02 - JS and CSS Clock</a>
 </body>
 
 </html>
