--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <a href="01 - JavaScript Drum Kit/index-MY.html">01 - JavaScript Drum Kit</a>
   <a href="02 - JS and CSS Clock/index-MY.html">02 - JS and CSS Clock</a>
+  <a href="03 - CSS Variables/index-MY.html">03 - CSS Variables</a>
 </body>
 
 </html>
