--- a/index.html
+++ b/index.html
@@ -9,9 +9,19 @@
 </head>
 
 <body>
-  <a href="01 - JavaScript Drum Kit/index-MY.html">01 - JavaScript Drum Kit</a>
-  <a href="02 - JS and CSS Clock/index-MY.html">02 - JS and CSS Clock</a>
-  <a href="03 - CSS Variables/index-MY.html">03 - CSS Variables</a>
+  <dl>
+    <dt><a href="01 - JavaScript Drum Kit/index-MY.html">01 - JavaScript Drum Kit</a></dt>
+    <dd>Практика работы с похожими DOM элементами, аудио и анимацией в js</dd>
+    <dt><a href="02 - JS and CSS Clock/index-MY.html">02 - JS and CSS Clock</a></dt>
+    <dd>Практика работы со временем в js, анимирование тика стрелки с помощь CSS свойств</dd>
+    <dt><a href="03 - CSS Variables/index-MY.html">03 - CSS Variables</a></dt>
+    <dd>Практика использования CSS переменных и изменение их с помощью js</dd>
+    <dt><a href="04 - Array Cardio Day 1/index-MY.html">04 - Array Cardio Day 1</a></dt>
+    <dd>Практика filter/map/sort/reduce</dd>
+  </dl>
+
+
+
 </body>
 
 </html>
