Add 05 - Flex Panel Gallery

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <dd>Практика использования CSS переменных и изменение их с помощью js</dd>
     <dt><a href="04 - Array Cardio Day 1/index-MY.html">04 - Array Cardio Day 1</a></dt>
     <dd>Практика filter/map/sort/reduce</dd>
+    <dt><a href="05 - Flex Panel Gallery/index-MY.html">05 - Flex Panel Gallery</a></dt>
+    <dd>Практика flexbox, по ивенту добавление и удаление класса элементу для анимации</dd>
   </dl>
 
 
