Add 06 - Type Ahead

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <dd>Практика filter/map/sort/reduce</dd>
     <dt><a href="05 - Flex Panel Gallery/index-MY.html">05 - Flex Panel Gallery</a></dt>
     <dd>Практика flexbox, по ивенту добавление и удаление класса элементу для анимации</dd>
+    <dt><a href="06 - Type Ahead/index-MY.html">06 - Type Ahead</a></dt>
+    <dd>Динамичный поиск. Практика fetch, promise, regexp (includes не подходит, потому что регистрозависим), динамическое обновление
+      списка, выделение искомого слова в результатах</dd>
   </dl>
 
 
