Add 07 - Array Cardio Day 2

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <dt><a href="06 - Type Ahead/index-MY.html">06 - Type Ahead</a></dt>
     <dd>Динамичный поиск. Практика fetch, promise, regexp (includes не подходит, потому что регистрозависим), динамическое обновление
       списка, выделение искомого слова в результатах</dd>
+    <dt><a href="07 - Array Cardio Day 2/index-MY.html">07 - Array Cardio Day 2</a></dt>
+    <dd>Практика some/every/find/findIndex (удаление элемента из массива slice)</dd>
   </dl>
 
 
