Add 08 - Fun with HTML5 Canvas

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
       списка, выделение искомого слова в результатах</dd>
     <dt><a href="07 - Array Cardio Day 2/index-MY.html">07 - Array Cardio Day 2</a></dt>
     <dd>Практика some/every/find/findIndex (удаление элемента из массива slice)</dd>
+    <dt><a href="08 - Fun with HTML5 Canvas/index-MY.html">08 - Fun with HTML5 Canvas</a></dt>
+    <dd>Рисование мышкой (практика canvas и mouse events)</dd>
   </dl>
 
 
