Add 09 - Dev Tools Domination

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <dd>Практика some/every/find/findIndex (удаление элемента из массива slice)</dd>
     <dt><a href="08 - Fun with HTML5 Canvas/index-MY.html">08 - Fun with HTML5 Canvas</a></dt>
     <dd>Рисование мышкой (практика canvas и mouse events)</dd>
+    <dt><a href="09 - Dev Tools Domination/index-MY.html">09 - Dev Tools Domination</a></dt>
+    <dd>Методы console</dd>
   </dl>
 
 
