Add 10 - Hold Shift and Check Checkboxes

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <dd>Рисование мышкой (практика canvas и mouse events)</dd>
     <dt><a href="09 - Dev Tools Domination/index-MY.html">09 - Dev Tools Domination</a></dt>
     <dd>Методы console</dd>
+    <dt><a href="10 - Hold Shift and Check Checkboxes/index-MY.html">10 - Hold Shift and Check Checkboxes</a></dt>
+    <dd>Множественный выбор чекбоксов с зажатым шифтом</dd>
   </dl>
 
 
