Add 11 - Custom Video Player

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <dd>Методы console</dd>
     <dt><a href="10 - Hold Shift and Check Checkboxes/index-MY.html">10 - Hold Shift and Check Checkboxes</a></dt>
     <dd>Множественный выбор чекбоксов с зажатым шифтом</dd>
+    <dt><a href="11 - Custom Video Player/index.html">11 - Custom Video Player</a></dt>
+    <dd>Оживляем с помощью js кастомный HTML5 Video Player (воспроизведение, пауза, изменение скорости и звука, показ прогресса)</dd>
   </dl>
 
 
