Add 12 - Key Sequence Detection

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <dd>Множественный выбор чекбоксов с зажатым шифтом</dd>
     <dt><a href="11 - Custom Video Player/index.html">11 - Custom Video Player</a></dt>
     <dd>Оживляем с помощью js кастомный HTML5 Video Player (воспроизведение, пауза, изменение скорости и звука, показ прогресса)</dd>
+    <dt><a href="12 - Key Sequence Detection/index-MY.html">12 - Key Sequence Detection</a></dt>
+    <dd>Определение какая клавиша нажата</dd>
   </dl>
 
 
