Add 13 - Slide in on Scroll

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     <dd>Оживляем с помощью js кастомный HTML5 Video Player (воспроизведение, пауза, изменение скорости и звука, показ прогресса)</dd>
     <dt><a href="12 - Key Sequence Detection/index-MY.html">12 - Key Sequence Detection</a></dt>
     <dd>Определение какая клавиша нажата</dd>
+    <dt><a href="13 - Slide in on Scroll/index-MY.html">13 - Slide in on Scroll</a></dt>
+    <dd>Показ картинок по скроллу</dd>
   </dl>
 
 
