--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
     <dt><a href="13 - Slide in on Scroll/index-MY.html">13 - Slide in on Scroll</a></dt>
     <dd>Показ картинок по скроллу</dd>
     <dt><a href="14 - JavaScript References VS Copying/index-MY.html">14 - JavaScript References VS Copying</a></dt>
-    <dd>Числа, строки, булевы значения копируются при присваивании в новую переменную, массивы и объекты ссылаются (способы копирования массива и объекта, без глубокого копирования)</dd>
+    <dd>Числа, строки, булевы значения копируются при присваивании в новую переменную, массивы и объекты ссылаются (способы копирования
+      массива и объекта, без глубокого копирования)</dd>
+    <dt><a href="15 - LocalStorage/index-MY.html">15 - LocalStorage</a></dt>
+    <dd>Практика с формой, показ списка, LocalStorage, event delegation</dd>
   </dl>
 
 
