Add 16 - Mouse Move Shadow

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
       массива и объекта, без глубокого копирования)</dd>
     <dt><a href="15 - LocalStorage/index-MY.html">15 - LocalStorage</a></dt>
     <dd>Практика с формой, показ списка, LocalStorage, event delegation</dd>
+    <dt><a href="16 - Mouse Move Shadow/index-MY.html">16 - Mouse Move Shadow</a></dt>
+    <dd>Тень текста связана с движением мыши</dd>
   </dl>
 
 
