Add 17 - Sort Without Articles

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     <dd>Практика с формой, показ списка, LocalStorage, event delegation</dd>
     <dt><a href="16 - Mouse Move Shadow/index-MY.html">16 - Mouse Move Shadow</a></dt>
     <dd>Тень текста связана с движением мыши</dd>
+    <dt><a href="17 - Sort Without Articles/index-MY.html">17 - Sort Without Articles</a></dt>
+    <dd>Практика array sort, регулярные выражения, вставка элементов</dd>
   </dl>
 
 
