--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     <dd>Тень текста связана с движением мыши</dd>
     <dt><a href="17 - Sort Without Articles/index-MY.html">17 - Sort Without Articles</a></dt>
     <dd>Практика array sort, регулярные выражения, вставка элементов</dd>
+    <dt><a href="18 - Adding Up Times with Reduce/index-MY.html">18 - Adding Up Times with Reduce</a></dt>
+    <dd>Практика map and reduce, подсчет общего количества времени</dd>
   </dl>
 
 
