Add 19 - Webcam Fun

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
     <dd>Практика array sort, регулярные выражения, вставка элементов</dd>
     <dt><a href="18 - Adding Up Times with Reduce/index-MY.html">18 - Adding Up Times with Reduce</a></dt>
     <dd>Практика map and reduce, подсчет общего количества времени</dd>
+    <dt><a href="19 - Webcam Fun/index.html">19 - Webcam Fun</a></dt>
+    <dd>Практика canvas (эффекты для веб-камеры с помощью canvas) (локальный сервер)</dd>
   </dl>
 
 
