Add 20 - Speech Detection

--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
     <dd>Практика map and reduce, подсчет общего количества времени</dd>
     <dt><a href="19 - Webcam Fun/index.html">19 - Webcam Fun</a></dt>
     <dd>Практика canvas (эффекты для веб-камеры с помощью canvas) (локальный сервер)</dd>
+    <dt><a href="20 - Speech Detection/index-MY.html">20 - Speech Detection</a></dt>
+    <dd>Практика распознавания речи в браузере (локальный сервер)</dd>
   </dl>
 
 
