--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
     <dd>Практика canvas (эффекты для веб-камеры с помощью canvas) (локальный сервер)</dd>
     <dt><a href="20 - Speech Detection/index-MY.html">20 - Speech Detection</a></dt>
     <dd>Практика распознавания речи в браузере (локальный сервер)</dd>
+    <dt><a href="21 - Geolocation/index-MY.html">21 - Geolocation</a></dt>
+    <dd>Практика с геолокацией (получение данных и отображение) (локальный сервер)</dd>
   </dl>
 
 
