Add 22 - Follow Along Link Highlighter

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
     <dd>Практика распознавания речи в браузере (локальный сервер)</dd>
     <dt><a href="21 - Geolocation/index-MY.html">21 - Geolocation</a></dt>
     <dd>Практика с геолокацией (получение данных и отображение) (локальный сервер)</dd>
+    <dt><a href="22 - Follow Along Link Highlighter/index-MY.html">22 - Follow Along Link Highlighter</a></dt>
+    <dd>Эффект наведения на ссылки, как будто наведение переходит от одной к другой</dd>
   </dl>
 
 
