--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
     <dd>Практика с геолокацией (получение данных и отображение) (локальный сервер)</dd>
     <dt><a href="22 - Follow Along Link Highlighter/index-MY.html">22 - Follow Along Link Highlighter</a></dt>
     <dd>Эффект наведения на ссылки, как будто наведение переходит от одной к другой</dd>
+    <dt><a href="23 - Speech Synthesis/index-MY.html">23 - Speech Synthesis</a></dt>
+    <dd>Практика с синтезатором речи</dd>
   </dl>
 
 
