Add 24 - Sticky Nav

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
     <dd>Эффект наведения на ссылки, как будто наведение переходит от одной к другой</dd>
     <dt><a href="23 - Speech Synthesis/index-MY.html">23 - Speech Synthesis</a></dt>
     <dd>Практика с синтезатором речи</dd>
+    <dt><a href="24 - Sticky Nav/index-MY.html">24 - Sticky Nav</a></dt>
+    <dd>Появление логотипа в фиксированном меню сайта (по умолчанию его нет, когда проскролливаешь вниз он появляется)</dd>
   </dl>
 
 
