--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
     <dd>Практика с синтезатором речи</dd>
     <dt><a href="24 - Sticky Nav/index-MY.html">24 - Sticky Nav</a></dt>
     <dd>Появление логотипа в фиксированном меню сайта (по умолчанию его нет, когда проскролливаешь вниз он появляется)</dd>
+    <dt><a href="25 - Event Capture, Propagation, Bubbling and Once/index-MY.html">25 - Event Capture, Propagation, Bubbling and Once</a></dt>
+    <dd>Практика, как работает event capture and bubbling, что делает propagation и свойство once у addEventListener</dd>
   </dl>
 
 
