Add 26 - Stripe Follow Along Nav

--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
     <dd>Появление логотипа в фиксированном меню сайта (по умолчанию его нет, когда проскролливаешь вниз он появляется)</dd>
     <dt><a href="25 - Event Capture, Propagation, Bubbling and Once/index-MY.html">25 - Event Capture, Propagation, Bubbling and Once</a></dt>
     <dd>Практика, как работает event capture and bubbling, что делает propagation и свойство once у addEventListener</dd>
+    <dt><a href="26 - Stripe Follow Along Nav/index-MY.html">26 - Stripe Follow Along Nav</a></dt>
+    <dd>Эффект наведения на пункты меню, как будто наведение переходит от одного к другому</dd>
   </dl>
 
 
