--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
     <dd>Практика, как работает event capture and bubbling, что делает propagation и свойство once у addEventListener</dd>
     <dt><a href="26 - Stripe Follow Along Nav/index-MY.html">26 - Stripe Follow Along Nav</a></dt>
     <dd>Эффект наведения на пункты меню, как будто наведение переходит от одного к другому</dd>
+    <dt><a href="27 - Click and Drag/index-MY.html">27 - Click and Drag</a></dt>
+    <dd>Горизонтальное перемещение по длинному диву</dd>
   </dl>
 
 
