Add 28 - Video Speed Controller

--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
     <dd>Эффект наведения на пункты меню, как будто наведение переходит от одного к другому</dd>
     <dt><a href="27 - Click and Drag/index-MY.html">27 - Click and Drag</a></dt>
     <dd>Горизонтальное перемещение по длинному диву</dd>
+    <dt><a href="28 - Video Speed Controller/index-MY.html">28 - Video Speed Controller</a></dt>
+    <dd>Контроль скорости видео не по заданным значениям, а как у звука</dd>
   </dl>
 
 
