Add 29 - Countdown Timer

--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
     <dd>Горизонтальное перемещение по длинному диву</dd>
     <dt><a href="28 - Video Speed Controller/index-MY.html">28 - Video Speed Controller</a></dt>
     <dd>Контроль скорости видео не по заданным значениям, а как у звука</dd>
+    <dt><a href="29 - Countdown Timer/index.html">29 - Countdown Timer</a></dt>
+    <dd>Делаем таймер</dd>
   </dl>
 
 
