Add 30 - Whack A Mole

--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
     <dd>Контроль скорости видео не по заданным значениям, а как у звука</dd>
     <dt><a href="29 - Countdown Timer/index.html">29 - Countdown Timer</a></dt>
     <dd>Делаем таймер</dd>
+    <dt><a href="30 - Whack A Mole/index-MY.html">30 - Whack A Mole</a></dt>
+    <dd>Делаем игру</dd>
   </dl>
 
 
