--- a/index.html
+++ b/index.html
@@ -6,9 +6,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>JavaScript30 | greybutton</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      margin: 0 auto;
+      min-width: 250px;
+      max-width: 500px;
+    }
+    img {
+      width: 100%;
+    }
+    dl {
+      padding: 10px;
+    }
+    dd {
+      margin-bottom: 15px;
+    }
+  </style>
 </head>
 
 <body>
+  <img src="https://javascript30.com/images/JS3-social-share.png" />
+  <h1>JavaScript30</h1>
+  <div>
+    <a href="https://github.com/wesbos/JavaScript30">Starter Files + Completed solutions for the JavaScript 30 Day Challenge</a>
+  </div>
+  <div>
+    <a href="https://JavaScript30.com">Grab the course at https://JavaScript30.com</a>
+  </div>
   <dl>
     <dt><a href="01 - JavaScript Drum Kit/index-MY.html">01 - JavaScript Drum Kit</a></dt>
     <dd>Практика работы с похожими DOM элементами, аудио и анимацией в js</dd>
@@ -73,9 +98,6 @@
     <dt><a href="30 - Whack A Mole/index-MY.html">30 - Whack A Mole</a></dt>
     <dd>Делаем игру</dd>
   </dl>
-
-
-
 </body>
 
 </html>
